--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/Laurancy-Dorian/Anti-Sexism_App#readme",
   "dependencies": {
+    "bcrypt": "^4.0.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1"
   }
